@@ -1021,5 +1021,7 @@ opj_bool j2k_get_tile(	opj_j2k_v2_t *p_j2k,
 						struct opj_event_mgr * p_manager,
 						OPJ_UINT32 tile_index );
 
+opj_bool j2k_set_decoded_resolution_factor(opj_j2k_v2_t *p_j2k, OPJ_UINT32 res_factor, opj_event_mgr_t * p_manager);
+
 
 #endif /* __J2K_H */
